# saga

./: .gitignore  CLAUDE.md  README.md  app.js  base.js  build-miri.sh  build-ocaml.sh  build-zig.sh  build.zig  build.zig.zon  challenges.js  documentation.html  echo-server.js  elevator-api.wit  elevator-saga.wit  elevator.js  floor.js  index.html  interfaces.js  jsconfig.json  package-lock.json  package.json  playwright.config.js  presenters.js  style.css  test-echo.html  vite-plugin-runtime-registry.js  vite.config.js  zig-dev.patch
.config/: cc-allow.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
docker/miri-build/: Dockerfile  build.sh  extract.sh  pre-build.sh
docker/miri-build-latest/: Dockerfile  build.sh  pre-build.sh
docs/: architecture-components.md  architecture-files.md  architecture-overview.md  architecture-sequences.md  index.html
docs/assets/: vendor.js  vendor.js.map
e2e/fixtures/: test-fixtures.d.ts  test-fixtures.js
e2e/helpers/: simulation-helpers.js
e2e/tests/: challenge-control.spec.js  challenge-progression.spec.js  code-editor.spec.js  error-handling.spec.js  game-feedback.spec.js  persistence.spec.js  runtime-java.spec.js  runtime-javascript.spec.js  runtime-python.spec.js  simulation.spec.js  theme-layout.spec.js
examples/: simulation-example.js
examples/rust-controller/: Cargo.toml  (+1 more)
ocaml-toplevel/: dune  dune-project  toplevel.ml
public/: coi-serviceworker.js  rust_controller.core.wasm  rust_controller.core2.wasm
src/: app.js  globals.d.ts  index.html  style.css
tests/: architecture.test.js
(+174 files in other folders)
